# PROACTIVE-IT-SUPPORT-DASHBOARD

./: .gitignore  README.md  docker-compose.yml  generate-config.js  package-lock.json  vercel.json
.agents/: task.md
agent/: CMakeLists.txt  CMakePresets.json  collect_diagnostics.ps1  vcpkg.json
agent/config/: config.json
agent/include/: AgentService.h  ConfigManager.h  DeviceRegistrar.h  HttpClient.h  MetricCollector.h
agent/include/App/: ServiceManager.h
agent/include/Application/: AgentDaemon.h
agent/include/Domain/Models/: AgentConfig.h  MetricData.h
agent/include/Domain/RepositoryInterfaces/: IConfigRepository.h
agent/include/Domain/ServiceInterfaces/: IHttpSender.h  IMetricCollector.h
agent/include/Infrastructure/Config/: JsonConfigRepository.h  OfflineCache.h
agent/include/Infrastructure/Logging/: Logger.h
agent/include/Infrastructure/Metrics/: WindowsMetricCollector.h
agent/include/Infrastructure/Network/: CprHttpSender.h
agent/src/: AgentService.cpp  ConfigManager.cpp  DeviceRegistrar.cpp  HttpClient.cpp  MetricCollector.cpp  main.cpp
agent/src/App/: ServiceManager.cpp  main.cpp
agent/src/Application/: AgentDaemon.cpp
agent/src/Infrastructure/Config/: JsonConfigRepository.cpp  OfflineCache.cpp
agent/src/Infrastructure/Logging/: Logger.cpp
agent/src/Infrastructure/Metrics/: WindowsMetricCollector.cpp
agent/src/Infrastructure/Network/: CprHttpSender.cpp
backend/: CMakeLists.txt  Dockerfile  vcpkg.json
backend/config/: config.json  config.json.template  database.json
backend/include/config/: Config.hpp
backend/include/controllers/: AlertController.hpp  AuthController.hpp  DeviceController.hpp  MetricController.hpp
backend/include/database/: Database.hpp
backend/include/middleware/: AuthMiddleware.hpp  CORSMiddleware.hpp
backend/include/models/: Alert.hpp  Device.hpp  DeviceDiagnostics.hpp  DeviceUser.hpp  Metric.hpp  User.hpp
backend/include/repositories/: AlertRepository.hpp  DeviceRepository.hpp  DeviceUserRepository.hpp  MetricRepository.hpp  RegistrationTokenRepository.hpp  UserRepository.hpp
backend/include/utils/: BcryptUtil.hpp  EventBroker.hpp  JWTUtil.hpp
backend/src/: main.cpp
backend/src/config/: Config.cpp
backend/src/controllers/: AlertController.cpp  AuthController.cpp  DeviceController.cpp  MetricController.cpp
backend/src/database/: Database.cpp
backend/src/repositories/: AlertRepository.cpp  DeviceRepository.cpp  DeviceUserRepository.cpp  MetricRepository.cpp  RegistrationTokenRepository.cpp  UserRepository.cpp
backend/src/utils/: BcryptUtil.cpp  EventBroker.cpp  JWTUtil.cpp
database/: schema.sql  seed.sql
docs/: api.md  architecture.md  deployment.md
frontend/: alerts.html  dashboard.html  deploy-agent.html  device-details.html  devices.html  index.html  login.html  signup.html
frontend/components/: footer.html  navbar.html  sidebar.html
frontend/css/: dashboard.css  login.css  style.css
frontend/js/: BlurText.js  alerts.js  api.js  auth.js  charts.js  config.js  dashboard.js  deploy.js  device-details.js  devices.js  hexagon-grid.js  icons.js  session.js  shapegrid.js  sidebar.js  utils.js
installer/windows/: compile_installer.bat  installer.iss
scripts/: build_agent.bat  build_backend.bat  start_agent.bat  start_backend.bat
